refactor: set build dir to dist/libs

--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "build": "npm run build:libs && npm run build:demo",
     "build:demo": "ng build",
     "build:libs": "ng-packagr -p libs/ngx-forms/package.json",
-    "postbuild:libs": "cpx libs/ngx-forms/src/css/**/*.css @ngx-plus/ngx-forms/css",
+    "postbuild:libs": "cpx libs/ngx-forms/src/css/**/*.css dist/libs/ngx-forms/css",
     "ng": "ng",
     "start": "ng serve",
     "test": "ng test",
