--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "precommit": "lint-staged",
     "format": "prettier --single-quote --no-semi --trailing-comma es5  --print-width 120 --write \"{apps,libs}/**/*.ts\"",
     "preghpages": "ng build --prod --base-href $BASE_HREF",
-    "ghpages": "npx angular-cli-ghpages --no-silent --repo=https://GH_TOKEN@github.com/$GH_ORG/$GH_REPO.git --name=$GH_NAME --email=$GH_EMAIL",
+    "ghpages": "npx angular-cli-ghpages --no-silent --repo=https://GH_TOKEN@github.com/$GH_ORG/$GH_REPO.git --name=$GH_NAME --email=$GH_EMAIL --dir=dist/apps/demo",
     "now-build": "npm run build:demo",
     "now-start": "npx serve demo/dist",
     "update": "ncu -a"
