--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ngx-plus/ngx-forms",
-  "version": "0.3.1",
+  "version": "0.4.3",
   "description": "Advanced Angular Form Development",
   "repository": {
     "type": "git",
@@ -37,18 +37,22 @@
     "build": "npm run build:libs && npm run build:demo",
     "build:demo": "ng build",
     "build:libs": "ng-packagr -p libs/ngx-forms/package.json",
-    "postbuild:libs": "cpx libs/ngx-forms/src/css/**/*.css dist/libs/ngx-forms/css",
-    "ng": "ng",
-    "start": "ng serve",
-    "test": "ng test",
-    "lint": "ng lint",
     "e2e": "ng e2e",
-    "precommit": "lint-staged",
     "format": "prettier --single-quote --no-semi --trailing-comma es5  --print-width 120 --write \"{apps,libs}/**/*.ts\"",
-    "preghpages": "ng build --prod --base-href $BASE_HREF",
     "ghpages": "npx angular-cli-ghpages --no-silent --repo=https://GH_TOKEN@github.com/$GH_ORG/$GH_REPO.git --name=$GH_NAME --email=$GH_EMAIL --dir=dist/apps/demo",
+    "lint": "ng lint",
+    "ng": "ng",
     "now-build": "npm run build:demo",
     "now-start": "npx serve demo/dist",
+    "postbuild:libs": "cpx libs/ngx-forms/src/css/**/*.css dist/libs/ngx-forms/css",
+    "postrelease": "node bin/prepublish.js && git push --follow-tags",
+    "precommit": "lint-staged",
+    "preghpages": "ng build --prod --base-href $BASE_HREF",
+    "prerelease": "npm run build:libs",
+    "publish": "npm publish dist/libs/ngx-forms",
+    "release": "standard-version --message \"release: cut v%s\"",
+    "start": "ng serve",
+    "test": "ng test",
     "update": "ncu -a"
   },
   "dependencies": {
@@ -61,20 +65,10 @@
     "@angular/platform-browser": "5.0.0",
     "@angular/platform-browser-dynamic": "5.0.0",
     "@angular/router": "5.0.0",
-    "@ngrx/effects": "^4.1.0",
-    "@ngrx/router-store": "^4.1.0",
-    "@ngrx/store": "^4.1.0",
-    "@ngrx/store-devtools": "4.0.0",
     "@ngx-formly/bootstrap": "^2.0.0-beta.1",
     "@ngx-formly/core": "^2.0.0-beta.1",
-    "@ngx-plus/ngx-logos": "^1.2.1",
     "@nrwl/nx": "0.1.1",
-    "bootstrap": "^4.0.0-beta.2",
     "core-js": "^2.4.1",
-    "cpx": "^1.5.0",
-    "font-awesome": "^4.7.0",
-    "ngx-clipboard": "^8.1.1",
-    "prismjs": "^1.8.4",
     "quill": "^1.3.4",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
@@ -83,11 +77,15 @@
     "@angular/cli": "nrwl/fix-cli-build",
     "@angular/compiler-cli": "5.0.0",
     "@angular/language-service": "5.0.0",
+    "@ngx-plus/ngx-logos": "^1.2.1",
     "@nrwl/schematics": "0.1.1",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
+    "bootstrap": "^4.0.0-beta.2",
     "codelyzer": "~3.1.1",
+    "cpx": "^1.5.0",
+    "font-awesome": "^4.7.0",
     "husky": "^0.14.3",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
@@ -99,7 +97,9 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "lint-staged": "^4.3.0",
     "ng-packagr": "^1.5.0",
+    "ngx-clipboard": "^8.1.1",
     "prettier": "1.7.4",
+    "prismjs": "^1.8.4",
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
     "tslint": "~5.3.2",
