--- a/libs/ngx-forms/package.json
+++ b/libs/ngx-forms/package.json
@@ -1,10 +1,44 @@
 {
   "$schema": "../../node_modules/ng-packagr/package.schema.json",
   "name": "@ngx-plus/ngx-forms",
+  "description": "Advanced Angular Form Development",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ngx-plus/ngx-forms.git"
+  },
+  "homepage": "https://github.com/ngx-plus/ngx-forms#readme",
+  "bugs": {
+    "url": "https://github.com/ngx-plus/ngx-forms/issues"
+  },
+  "publishConfig": {
+    "access": "public"
+  },
+  "private": false,
+  "keywords": [
+    "angular",
+    "angular2",
+    "angular4",
+    "forms",
+    "ngx-forms",
+    "ngx-plus",
+    "colmena",
+    "ngx"
+  ],
+  "contributors": [
+    "Brannon N. Darby II <brannon@ngx.plus> (https://github.com/brannon-darby)",
+    "Bram Borggreve <borggreve@gmail.com> (https://github.com/beeman)"
+  ],
+  "license": "MIT",
+  "dependencies": {
+    "@ngx-formly/bootstrap": "^2.0.0-beta.1",
+    "@ngx-formly/core": "^2.0.0-beta.1",
+    "quill": "^1.3.4"
+  },
   "ngPackage": {
     "lib": {
       "entryFile": "index.ts"
     },
+    "src": "libs/ngx-forms",
     "dest": "dist/libs/ngx-forms"
   }
 }
