--- a/package.json
+++ b/package.json
@@ -11,26 +11,14 @@
     "url": "https://github.com/ngx-plus/ngx-forms/issues"
   },
   "private": false,
-  "keywords": [
-    "angular",
-    "angular2",
-    "angular4",
-    "forms",
-    "ngx-forms",
-    "ngx-plus",
-    "colmena",
-    "ngx"
-  ],
+  "keywords": ["angular", "angular2", "angular4", "forms", "ngx-forms", "ngx-plus", "colmena", "ngx"],
   "contributors": [
     "Brannon N. Darby II <brannon@ngx.plus> (https://github.com/brannon-darby)",
     "Bram Borggreve <borggreve@gmail.com> (https://github.com/beeman)"
   ],
   "license": "MIT",
   "lint-staged": {
-    "*.ts": [
-      "npm run format",
-      "git add"
-    ]
+    "*.ts": ["npm run format", "git add"]
   },
   "scripts": {
     "add:contributor": "all-contributors add",
@@ -38,8 +26,10 @@
     "build:demo": "ng build",
     "build:libs": "ng-packagr -p libs/ngx-forms/package.json",
     "e2e": "ng e2e",
-    "format": "prettier --single-quote --no-semi --trailing-comma es5  --print-width 120 --write \"{apps,libs}/**/*.ts\"",
-    "ghpages": "npx angular-cli-ghpages --no-silent --repo=https://GH_TOKEN@github.com/$GH_ORG/$GH_REPO.git --name=$GH_NAME --email=$GH_EMAIL --dir=dist/apps/demo",
+    "format":
+      "prettier --single-quote --no-semi --trailing-comma es5  --print-width 120 --write \"{apps,libs}/**/*.ts\"",
+    "ghpages":
+      "npx angular-cli-ghpages --no-silent --repo=https://GH_TOKEN@github.com/$GH_ORG/$GH_REPO.git --name=$GH_NAME --email=$GH_EMAIL --dir=dist/apps/demo",
     "lint": "ng lint",
     "ng": "ng",
     "now-build": "npm run build:demo",
@@ -56,6 +46,11 @@
     "update": "ncu -a"
   },
   "dependencies": {
+    "@ngx-formly/bootstrap": "^2.0.0-beta.1",
+    "@ngx-formly/core": "^2.0.0-beta.1",
+    "quill": "^1.3.4"
+  },
+  "devDependencies": {
     "@angular/animations": "5.0.0",
     "@angular/common": "5.0.0",
     "@angular/compiler": "5.0.0",
@@ -65,25 +60,18 @@
     "@angular/platform-browser": "5.0.0",
     "@angular/platform-browser-dynamic": "5.0.0",
     "@angular/router": "5.0.0",
-    "@ngx-formly/bootstrap": "^2.0.0-beta.1",
-    "@ngx-formly/core": "^2.0.0-beta.1",
-    "@nrwl/nx": "0.1.1",
-    "core-js": "^2.4.1",
-    "quill": "^1.3.4",
-    "rxjs": "^5.5.2",
-    "zone.js": "^0.8.14"
-  },
-  "devDependencies": {
     "@angular/cli": "nrwl/fix-cli-build",
     "@angular/compiler-cli": "5.0.0",
     "@angular/language-service": "5.0.0",
     "@ngx-plus/ngx-logos": "^1.2.1",
+    "@nrwl/nx": "0.1.1",
     "@nrwl/schematics": "0.1.1",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
     "bootstrap": "^4.0.0-beta.2",
     "codelyzer": "~3.1.1",
+    "core-js": "^2.4.1",
     "cpx": "^1.5.0",
     "font-awesome": "^4.7.0",
     "husky": "^0.14.3",
@@ -101,9 +89,11 @@
     "prettier": "1.7.4",
     "prismjs": "^1.8.4",
     "protractor": "~5.1.2",
+    "rxjs": "^5.5.2",
     "standard-version": "^4.2.0",
     "ts-node": "~3.2.0",
     "tslint": "~5.3.2",
-    "typescript": "2.4.2"
+    "typescript": "2.4.2",
+    "zone.js": "^0.8.14"
   }
 }
