--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ngx-plus/ngx-forms",
-  "version": "0.5.0",
+  "version": "0.5.1",
   "description": "Advanced Angular Form Development",
   "repository": {
     "type": "git",
@@ -11,14 +11,26 @@
     "url": "https://github.com/ngx-plus/ngx-forms/issues"
   },
   "private": false,
-  "keywords": ["angular", "angular2", "angular4", "forms", "ngx-forms", "ngx-plus", "colmena", "ngx"],
+  "keywords": [
+    "angular",
+    "angular2",
+    "angular4",
+    "forms",
+    "ngx-forms",
+    "ngx-plus",
+    "colmena",
+    "ngx"
+  ],
   "contributors": [
     "Brannon N. Darby II <brannon@ngx.plus> (https://github.com/brannon-darby)",
     "Bram Borggreve <borggreve@gmail.com> (https://github.com/beeman)"
   ],
   "license": "MIT",
   "lint-staged": {
-    "*.ts": ["npm run format", "git add"]
+    "*.ts": [
+      "npm run format",
+      "git add"
+    ]
   },
   "scripts": {
     "add:contributor": "all-contributors add",
@@ -27,10 +39,8 @@
     "build:libs": "ng-packagr -p libs/ngx-forms/package.json",
     "clean": "node bin/clean",
     "e2e": "ng e2e",
-    "format":
-      "prettier --single-quote --no-semi --trailing-comma es5  --print-width 120 --write \"{apps,libs}/**/*.ts\"",
-    "ghpages":
-      "npx angular-cli-ghpages --no-silent --repo=https://GH_TOKEN@github.com/$GH_ORG/$GH_REPO.git --name=$GH_NAME --email=$GH_EMAIL --dir=dist/apps/demo",
+    "format": "prettier --single-quote --no-semi --trailing-comma es5  --print-width 120 --write \"{apps,libs}/**/*.ts\"",
+    "ghpages": "npx angular-cli-ghpages --no-silent --repo=https://GH_TOKEN@github.com/$GH_ORG/$GH_REPO.git --name=$GH_NAME --email=$GH_EMAIL --dir=dist/apps/demo",
     "lint": "ng lint",
     "ng": "ng",
     "now-build": "npm run build:demo",
@@ -53,17 +63,18 @@
   },
   "devDependencies": {
     "@angular/animations": "5.0.0",
+    "@angular/cli": "nrwl/fix-cli-build",
     "@angular/common": "5.0.0",
     "@angular/compiler": "5.0.0",
+    "@angular/compiler-cli": "5.0.0",
     "@angular/core": "5.0.0",
     "@angular/forms": "5.0.0",
     "@angular/http": "5.0.0",
+    "@angular/language-service": "5.0.0",
     "@angular/platform-browser": "5.0.0",
     "@angular/platform-browser-dynamic": "5.0.0",
     "@angular/router": "5.0.0",
-    "@angular/cli": "nrwl/fix-cli-build",
-    "@angular/compiler-cli": "5.0.0",
-    "@angular/language-service": "5.0.0",
+    "@angular/tsc-wrapped": "^4.4.6",
     "@ngx-plus/ngx-logos": "^1.2.1",
     "@nrwl/nx": "0.1.1",
     "@nrwl/schematics": "0.1.1",
