--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "@ngx-plus/ngx-forms",
   "version": "0.5.1",
   "description": "Advanced Angular Form Development",
+  "contributors": [
+    "Brannon N. Darby II <brannon@ngx.plus> (https://github.com/brannon-darby)",
+    "Bram Borggreve <borggreve@gmail.com> (https://github.com/beeman)"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/ngx-plus/ngx-forms.git"
@@ -11,26 +15,10 @@
     "url": "https://github.com/ngx-plus/ngx-forms/issues"
   },
   "private": false,
-  "keywords": [
-    "angular",
-    "angular2",
-    "angular4",
-    "forms",
-    "ngx-forms",
-    "ngx-plus",
-    "colmena",
-    "ngx"
-  ],
-  "contributors": [
-    "Brannon N. Darby II <brannon@ngx.plus> (https://github.com/brannon-darby)",
-    "Bram Borggreve <borggreve@gmail.com> (https://github.com/beeman)"
-  ],
+  "keywords": ["angular", "angular2", "angular4", "forms", "ngx-forms", "ngx-plus", "colmena", "ngx"],
   "license": "MIT",
   "lint-staged": {
-    "*.ts": [
-      "npm run format",
-      "git add"
-    ]
+    "*.ts": ["npm run format", "git add"]
   },
   "scripts": {
     "add:contributor": "all-contributors add",
@@ -39,8 +27,10 @@
     "build:libs": "ng-packagr -p libs/ngx-forms/package.json",
     "clean": "node bin/clean",
     "e2e": "ng e2e",
-    "format": "prettier --single-quote --no-semi --trailing-comma es5  --print-width 120 --write \"{apps,libs}/**/*.ts\"",
-    "ghpages": "npx angular-cli-ghpages --no-silent --repo=https://GH_TOKEN@github.com/$GH_ORG/$GH_REPO.git --name=$GH_NAME --email=$GH_EMAIL --dir=dist/apps/demo",
+    "format":
+      "prettier --single-quote --no-semi --trailing-comma es5  --print-width 120 --write \"{apps,libs}/**/*.ts\"",
+    "ghpages":
+      "npx angular-cli-ghpages --no-silent --repo=https://GH_TOKEN@github.com/$GH_ORG/$GH_REPO.git --name=$GH_NAME --email=$GH_EMAIL --dir=dist/apps/demo",
     "lint": "ng lint",
     "ng": "ng",
     "now-build": "npm run build:demo",
@@ -56,10 +46,16 @@
     "test": "ng test",
     "update": "ncu -a"
   },
+  "module": "@ngx-plus/ngx-forms.js",
+  "typings": "ngx-forms.d.ts",
   "dependencies": {
     "@ngx-formly/bootstrap": "^2.0.0-beta.1",
     "@ngx-formly/core": "^2.0.0-beta.1",
     "quill": "^1.3.4"
+  },
+  "peerDependencies": {
+    "@angular/core": "5.0.0",
+    "@angular/forms": "5.0.0"
   },
   "devDependencies": {
     "@angular/animations": "5.0.0",
