--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ngx-plus/ngx-forms",
-  "version": "0.5.1",
+  "version": "0.5.2",
   "description": "Advanced Angular Form Development",
   "contributors": [
     "Brannon N. Darby II <brannon@ngx.plus> (https://github.com/brannon-darby)",
@@ -15,10 +15,22 @@
     "url": "https://github.com/ngx-plus/ngx-forms/issues"
   },
   "private": false,
-  "keywords": ["angular", "angular2", "angular4", "forms", "ngx-forms", "ngx-plus", "colmena", "ngx"],
+  "keywords": [
+    "angular",
+    "angular2",
+    "angular4",
+    "forms",
+    "ngx-forms",
+    "ngx-plus",
+    "colmena",
+    "ngx"
+  ],
   "license": "MIT",
   "lint-staged": {
-    "*.ts": ["npm run format", "git add"]
+    "*.ts": [
+      "npm run format",
+      "git add"
+    ]
   },
   "scripts": {
     "add:contributor": "all-contributors add",
@@ -27,10 +39,8 @@
     "build:libs": "ng-packagr -p libs/ngx-forms/package.json",
     "clean": "node bin/clean",
     "e2e": "ng e2e",
-    "format":
-      "prettier --single-quote --no-semi --trailing-comma es5  --print-width 120 --write \"{apps,libs}/**/*.ts\"",
-    "ghpages":
-      "npx angular-cli-ghpages --no-silent --repo=https://GH_TOKEN@github.com/$GH_ORG/$GH_REPO.git --name=$GH_NAME --email=$GH_EMAIL --dir=dist/apps/demo",
+    "format": "prettier --single-quote --no-semi --trailing-comma es5  --print-width 120 --write \"{apps,libs}/**/*.ts\"",
+    "ghpages": "npx angular-cli-ghpages --no-silent --repo=https://GH_TOKEN@github.com/$GH_ORG/$GH_REPO.git --name=$GH_NAME --email=$GH_EMAIL --dir=dist/apps/demo",
     "lint": "ng lint",
     "ng": "ng",
     "now-build": "npm run build:demo",
